# terrasight

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml  lefthook.yml
.claude/: launch.json
backend/: main.py  (+2 more)
scripts/: README.md  build-static-data.py  build-wasm.sh  convert-geodata.py  download-l01-landprice.sh  download-n03-boundaries.sh  import-geojson.py  import-l01.py  pipeline.sh  process-geodata.py  pyproject.toml  requirements.txt  seed_dev_data.sql
scripts/commands/: build-wasm.sh  db-full-reset.sh  db-import-all.sh  db-import.sh  db-migrate.sh  db-reset.sh  db-seed.sh  db-status.sh  download-data.sh  inspect-zip.sh  pipeline-all.sh  pipeline.sh
scripts/tools/: build_static_data.py  compress-wasm.sh  convert_geodata.py  fetch_estat.py  import_geojson.py  import_l01.py
scripts/tools/pipeline/: build_fgb.py  convert.py  import_db.py  registry.py  validate.py
scripts/tools/pipeline/adapters/: base.py  national.py  per_pref.py  reinfolib_csv.py  zip_utils.py
scripts/tools/pipeline_v2/: build_fgb.py  convert.py  import_db.py  validate.py
scripts/tools/pipeline_v2/adapters/: base.py  manual_static.py
services/backend/: .dockerignore  .env.example  .sqruff  Cargo.toml  Dockerfile
services/backend/.cargo/: config.toml
services/backend/docker/: postgresql.conf
services/backend/lib/api-core/: Cargo.toml
services/backend/lib/api-core/src/: error.rs  lib.rs  middleware.rs  response.rs
services/backend/lib/api-core/src/middleware/: rate_limit.rs  request_id.rs  response_time.rs
services/backend/lib/db/: Cargo.toml
services/backend/lib/db/src/: geo.rs  lib.rs  pool.rs  spatial.rs
services/backend/lib/domain/: Cargo.toml
services/backend/lib/domain/src/: constants.rs  lib.rs  scoring.rs  types.rs
services/backend/lib/domain/src/scoring/: axis.rs  constants.rs  sub_scores.rs  tls.rs
services/backend/lib/geo/: Cargo.toml
services/backend/lib/geo-math/: Cargo.toml
services/backend/lib/geo-math/src/: finance.rs  lib.rs  rounding.rs  spatial.rs
services/backend/lib/geo/src/: coord.rs  finance.rs  lib.rs  rounding.rs  spatial.rs  tile.rs
services/backend/lib/mlit/: Cargo.toml
services/backend/lib/mlit-client/: Cargo.toml
services/backend/lib/mlit-client/src/: error.rs  estat.rs  jshis.rs  ksj.rs  lib.rs  reinfolib.rs  tile.rs
services/backend/lib/mlit/src/: config.rs  error.rs  estat.rs  jshis.rs  ksj.rs  lib.rs  reinfolib.rs  retry.rs  types.rs
services/backend/lib/server/: Cargo.toml
services/backend/lib/server/src/: db.rs  http.rs  lib.rs  log.rs  metrics.rs
services/backend/lib/server/src/db/: error.rs  geo.rs  pool.rs  spatial.rs
services/backend/lib/telemetry/: Cargo.toml
services/backend/lib/telemetry/src/: http.rs  lib.rs  metrics.rs
services/backend/migrations/: 00000000000001_schema.sql  00000000000002_reinfolib.sql  00000000000002_seed.sql  00000000000003_estat.sql  20260320000001_init.sql  20260322000001_seed_dev.sql  20260323000001_l01_unique_constraint.sql  20260323000002_geojson_tables.sql  20260326000001_schema_redesign.sql  20260326000002_admin_boundaries.sql
services/backend/scripts/: seed-dev.sh
services/backend/src/: app_state.rs  config.rs  domain.rs  handler.rs  infra.rs  lib.rs  logging.rs  main.rs  usecase.rs
services/backend/src/domain/: appraisal.rs  constants.rs  entity.rs  error.rs  mod.rs  model.rs  municipality.rs  reinfolib.rs  repository.rs  scoring.rs  transaction.rs  value_object.rs
services/backend/src/domain/model/: aggregation.rs  appraisal.rs  area.rs  estat.rs  geo.rs  health.rs  municipality.rs  opportunity.rs  price.rs  primitives.rs  tls.rs  transaction.rs  trend.rs
services/backend/src/domain/repository/: admin_area.rs  aggregation.rs  appraisal.rs  health.rs  land_price.rs  layer.rs  mock.rs  municipality.rs  population.rs  stats.rs  tls.rs  transaction.rs  trend.rs  vacancy.rs
services/backend/src/domain/scoring/: axis.rs  constants.rs  sub_scores.rs  tls.rs
services/backend/src/handler/: appraisals.rs  area_data.rs  area_stats.rs  error.rs  health.rs  land_price.rs  land_price_aggregation.rs  land_price_all_years.rs  land_price_by_year_range.rs  municipalities.rs  opportunities.rs  population.rs  request.rs  response.rs  score.rs  stats.rs  transaction_aggregation.rs  transaction_summary.rs  transactions.rs  trend.rs  vacancy.rs
services/backend/src/handler/request/: appraisal.rs  area_data.rs  area_stats.rs  bbox.rs  land_price.rs  municipality.rs  opportunities.rs  population.rs  transaction.rs  trend.rs  vacancy.rs
services/backend/src/handler/response/: appraisal.rs  area_data.rs  area_stats.rs  health.rs  layer.rs  municipality.rs  opportunities.rs  population.rs  stats.rs  tls.rs  transaction.rs  trend.rs  vacancy.rs
services/backend/src/infra/: geo_convert.rs  map_db_err.rs  opportunities_cache.rs  pg_admin_area_stats_repository.rs  pg_aggregation_repository.rs  pg_appraisal_repository.rs  pg_area_repository.rs  pg_health_repository.rs  pg_land_price_repository.rs  pg_municipality_repository.rs  pg_population_repository.rs  pg_score_repository.rs  pg_stats_repository.rs  pg_tls_repository.rs  pg_transaction_repository.rs  pg_trend_repository.rs  pg_vacancy_repository.rs  query_helpers.rs  reinfolib_mock.rs  row_types.rs
services/backend/src/models/: error.rs  geojson.rs  mod.rs
services/backend/src/routes/: area_data.rs  health.rs  mod.rs  score.rs  stats.rs  trend.rs
services/backend/src/services/: scoring.rs
services/backend/src/usecase/: check_health.rs  compute_score.rs  compute_tls.rs  get_appraisals.rs  get_area_data.rs  get_area_stats.rs  get_land_price_aggregation.rs  get_land_prices.rs  get_land_prices_by_year_range.rs  get_municipalities.rs  get_opportunities.rs  get_population.rs  get_stats.rs  get_transaction_aggregation.rs  get_transaction_summary.rs  get_transactions.rs  get_trend.rs  get_vacancy.rs
services/backend/tests/: api_integration.rs
services/wasm/: Cargo.toml
services/wasm/src/: bbox.rs  constants.rs  error.rs  fgb_reader.rs  lib.rs  spatial_index.rs  stats.rs  tls.rs
(+516 files in other folders)
