[project]
name = "realestate-scripts"
version = "0.1.0"
description = "Data pipeline tools for real estate investment analysis"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.0",
    "pandas>=2.0.0",
    "fiona[all]>=1.10.0",
    "pyproj>=3.6.0",
    "shapely>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.uv]
dev-dependencies = []
