[package]
name = "realestate-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
realestate-geo-math = { path = "../backend/lib/geo-math" }
wasm-bindgen = "0.2"
js-sys = "0.3"
rstar = "0.12"
flatgeobuf = { version = "6", default-features = false }
geozero = "0.15"
geo = "0.29"
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
