[package]
name = "realestate-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
terrasight-geo = { path = "../backend/lib/geo" }
terrasight-domain = { path = "../backend/lib/domain" }
wasm-bindgen = "0.2"
js-sys = "0.3"
rstar = "0.12"
flatgeobuf = { version = "6", default-features = false }
geozero = "0.15"
geo = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
