[package]
name = "realestate-api-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Shared API infrastructure: generic error mapping, GeoJSON response types"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tower = { version = "0.5", features = ["util"] }
tower_governor = "0.8"
governor = "0.10"
tower-http = { version = "0.6", features = ["request-id", "set-header"] }
uuid = { version = "1", features = ["v4"] }
http = "1"
pin-project-lite = "0.2"
