[package]
name = "terrasight-mlit"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "HTTP client for Japanese government APIs (reinfolib, KSJ, e-Stat)"

[features]
default = ["reinfolib", "jshis"]
reinfolib = []
ksj = []
estat = []
jshis = []

[dependencies]
terrasight-geo = { path = "../geo" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
