[package]
name = "terrasight-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Server infrastructure: DB pool, HTTP middleware, telemetry"

[features]
default = ["db", "http", "metrics", "log"]
db = ["dep:sqlx"]
http = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tower_governor",
    "dep:governor",
    "dep:uuid",
    "dep:http",
    "dep:pin-project-lite",
]
metrics = [
    "dep:metrics",
    "dep:metrics-exporter-prometheus",
    "dep:axum",
    "dep:tokio",
]
log = ["dep:tracing-subscriber"]

[dependencies]
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# db feature
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], optional = true }

# http feature
axum = { version = "0.8", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id", "propagate-header", "set-header"], optional = true }
tower_governor = { version = "0.8", optional = true }
governor = { version = "0.10", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# metrics feature
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }
tokio = { version = "1", features = ["net"], optional = true }

# log feature
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"], optional = true }
