[package]
name = "realestate-telemetry"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Observability toolkit for realestate-api: structured logging, metrics, and HTTP tracing"

[features]
default = ["log"]
log = ["dep:tracing-subscriber"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus", "dep:axum", "dep:tokio"]
http = ["dep:tower-http", "dep:axum"]

[dependencies]
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# log feature
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"], optional = true }

# metrics feature
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["net"], optional = true }

# http feature
tower-http = { version = "0.6", features = ["trace", "request-id", "propagate-header"], optional = true }
